--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,18 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<server>tomcat</server>
+					<path>/${project.name}</path>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
