--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<groupId>ru.darvell.ktv</groupId>
 	<artifactId>AbonentsProjectKTV</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	<packaging>war</packaging>
 
 	<build>
 		<plugins>
@@ -21,14 +22,22 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<packagingExcludes>WEB-INF/web.xml</packagingExcludes>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.1</version>
 				<configuration>
-					<server>tomcat</server>
-					<path>/${project.name}</path>
+					<url>http://localhost:8080/manager/text</url>
+					<path>/ktvservlet</path>
 				</configuration>
 			</plugin>
 
