--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 				<version>2.1</version>
 				<configuration>
 					<url>http://localhost:8080/manager/text</url>
-					<path>/ktvservlet</path>
+					<path>/ktv</path>
 				</configuration>
 			</plugin>
 
@@ -73,6 +73,13 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
