--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-		 version="3.0">
+		 version="2.5">
 
 	<servlet>
 		<servlet-name>KTV Servlet</servlet-name>
@@ -21,7 +21,7 @@
 
 	<servlet-mapping>
 		<servlet-name>Abonents</servlet-name>
-		<url-pattern>/ktv/abonents</url-pattern>
+		<url-pattern>/abonents</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
