--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
 		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 		 version="2.5">
 
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>/WEB-INF/log4j.xml</param-value>
+	</context-param>
+
 	<servlet>
 		<servlet-name>KTV Servlet</servlet-name>
 		<servlet-class>ru.darvell.ktv.web.KTVServlet</servlet-class>
@@ -15,13 +20,13 @@
 	</servlet-mapping>
 
 	<servlet>
-		<servlet-name>Abonents</servlet-name>
-		<servlet-class>ru.darvell.ktv.web.Abonents</servlet-class>
+		<servlet-name>AbonentsSearch</servlet-name>
+		<servlet-class>ru.darvell.ktv.web.AbonentsSearch</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>Abonents</servlet-name>
-		<url-pattern>/abonents</url-pattern>
+		<servlet-name>AbonentsSearch</servlet-name>
+		<url-pattern>/abonsearch</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
